--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "sql.js": "0.3.2"
   },
   "scripts": {
-    "start": "\"npm server\" \"npm client\"",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "node app.js",
     "client": "node start-client.js",
     "dev": "echo \"This command has been deprecated. Use 'npm start'\" && exit 1",
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "concurrently": "^3.1.0",
-    "eslint": "^3.19.0",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
